k8s/nfs-subdir-external-provisioner/namespace-nfs-subdir-external-provisioner.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "nfs-subdir-external-provisioner"
  labels:
    goldilocks.fairwinds.com/enabled: "true"
