k8s/nfs-subdir-external-provisioner/cilium-network-policy-nfs-subdir-external-provisioner.yaml
---
apiVersion: "cilium.io/v2"
kind: "CiliumNetworkPolicy"
metadata:
  name: "nfs-subdir-external-provisioner"
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: "nfs-subdir-external-provisioner"
      app.kubernetes.io/name: "nfs-subdir-external-provisioner"
  ingress: 
    - {}
  egress:
    - toEntities:
        - "kube-apiserver"
        - "host"
      toPorts:
        - ports:
            - port: "6443"
              protocol: "TCP"
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: "kube-system"
            k8s:k8s-app: "kube-dns"
      toPorts:
        - ports:
            - port: "53"
              protocol: "ANY"
          rules:
            dns:
              - matchPattern: "*"
    - toCIDR:
        - "192.168.178.85/32"
      toPorts:
        - ports:
            - port: "2049"
              protocol: "TCP"
